# spi-dump

./: .gitignore  Makefile  Makefile.am  README.md  app.vala  autogen.sh  configure.ac  spi-dump.ino  transfer.vala
src/: Makefile.am  plugin-engine.vala  progress.vala  spi-dump.bup.vala  spi-dump.vala  transfer.vala  tty.vala
src/libplugin/: Makefile.am  libspi-dump-plugin.vala
src/plugins/: Makefile.am
src/plugins/arduino/: arduino.plugin  arduino.vala  spi-dump.ino
src/progressbar/: progressbar.c  progressbar.vapi
test/: Makefile.am  mock-arduino.vala  tty.vala
