AM_MAKEFLAGS = --no-print-directory

SUBDIRS = src test

MAINTAINERCLEANFILES = \
	$(GITIGNORE_MAINTAINERCLEANFILES_TOPLEVEL) \
	$(GITIGNORE_MAINTAINERCLEANFILES_MAKEFILE_IN) \
	$(GITIGNORE_MAINTAINERCLEANFILES_M4_LIBTOOL) \
	m4/pkg.m4

EXTRA_DIST = autogen.sh

GITIGNOREFILES = *.bin

-include git.mk
